# Geojam-Green-London

./: .gitignore  ARCHITECTURE.md  GeoJam - Start Here!.docx  GeoJam QR Codes.docx  PERFORMANCE.md  PLAN.md  README.md  geojam-participant.ipynb
Data Prep notebooks/: geojam-check.ipynb  geojam-data-prep.ipynb
akif/: PROJECT_LOG.md  README_AKIF.md  create_animation.py  download_time_series.py  fix_population.py  generate_annual_maps.py  generate_strategic_maps.py  generate_verification_visuals.py  normalize_data.py  patch_missing_data.py  patch_missing_data_v2.py  patch_missing_data_v3.py  run_advanced_analysis.py  run_clustering_refined.py  run_final_analysis.py
akif/advanced_analysis/: cluster_legend.json  msoa_advanced_metrics.csv  msoa_advanced_metrics.gpkg
akif/final_results/: london_borough_leaderboard.csv  london_final_msoa_metrics.csv  london_final_spatial_data.gpkg
akif/sentinel_time_series/: summary.json
akif/strategic_maps/: borough_strategic_brief.txt
apps/web/: package-lock.json  package.json  vercel.json
cities/: _index.json  berlin.yaml  london.yaml  paris.yaml
data-pipeline/: Makefile  README.md  pyproject.toml  requirements.txt
data-pipeline/src/: attrs.py  cog.py  pmtiles.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: ndvi_zonal.sql
infra/terraform/: README.md  main.tf  variables.tf
pipeline/: Makefile  __init__.py  requirements.txt
pipeline/src/: __init__.py  anomalies.py  features.py  io.py  model.py  spatial.py
pipeline/tests/: test_model.py  (+2 more)
queries/: equity.sql  green_areas.sql  raster_examples.sql  timeseries.sql
(+17 files in other folders)
